@@ -546,8 +546,7 @@ sub create
         my $rs = EBox::Global->modInstance('remoteservices');
         if ($users->master() eq 'cloud') {
             $max_users = $rs->maxCloudUsers();
-        }
-        else {
+        } else {
             $max_users = $rs->maxUsers();
         }
     }
